# objProg

./: LesData2.h  OBLIG_1  OBLIG_1.cpp  OBLIG_2  OBLIG_2.cpp  OBLIG_3  OBLIG_3.cpp  OBLIG_3.dta  README.md
OBLIG_4/: Bolig.cpp  Bolig.h  CMakeLists.txt  Consts.h  Enebolig.cpp  Enebolig.h  Enum.h  Global.cpp  Global.h  K3.dta  Kunde.cpp  Kunde.h  Kunder.cpp  Kunder.dta  Kunder.h  LesData3.cpp  LesData3.h  Main.cpp  Sone.cpp  Sone.h  Soner.cpp  Soner.dta  Soner.h  kunderFormat  sonerFormat
